webapp/src/stylesheets/main.scss
$primary: #444444;
$primary-bg-subtle: #888;
$primary-border-subtle: #aaa;
$input-placeholder-color: rgba(0, 0, 0, 0.4);

:root {
  --bs-link-opacity: 0.75;
}

$enable-negative-margins: true;

@import '~bootstrap/scss/bootstrap';
$bootstrap-icons-font-dir: '~bootstrap-icons/font/fonts';
@import '~bootstrap-icons/font/bootstrap-icons';
@import "flatpickr/dist/flatpickr";

// Writing your own styles should be the last resort.
// Please try your best to use the existing Bootstrap classes first.

body {
  padding-top: 50px;
}

.card-object {
  width: 200px;
  height: 100%;
  margin: auto;
  text-align: center;

  img {
    height: 200px;
    object-fit: cover;
  }

  .card-body {
    padding: 0.5rem;
  }
}

.table {
  // Sorting indicators
  > thead > tr > th {
    &::after {
      content: '▼';
      visibility: hidden;
      user-select: none;
    }

    &.sorting-asc::after {
      visibility: visible;
    }

    &.sorting-desc::after {
      visibility: visible;
      content: '▲';
    }
  }

  // Always align table cells vertically in the middle
  > tbody > tr {
    > th,
    > td {
      vertical-align: middle;
    }
  }
}

.cursor-pointer {
  cursor: pointer;
}

a {
  text-decoration: none;
}
.accept {
  color: #fff;
  background: rgba(93, 150, 93, 0.82);
  padding: 15px 20px;
  border-radius: 15px;
}
.accept:hover {
  background: #517051;
}
.deny {
  color: #fff;
  background: rgba(208, 101, 78, 0.83);
  padding: 15px 20px;
  border-radius: 15px;
}
.deny:hover {
  background: rgb(176, 86, 69);
}

.bordure_verticale {
  height: 50px;
  margin: 20px;
  display: inline-block;
  vertical-align: middle;
}

#refuse {
  border-radius: 10px;
  vertical-align: middle;
  width: 400px;
}

